Fix the aligning of the page
first we edit the HTML doc the header part

fix the whole of CSS

--- a/styles.css
+++ b/styles.css
@@ -7,47 +7,67 @@ body {
 }
 
 .header-container {
-  padding: 50px;
-  border: 1px solid blue;
   background-color: #1F2937;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.top-header {
   display: flex;
   justify-content: space-around;
 }
 
-.left-header {
-  border: 1px solid red;
+.logo {
+  font-size: 24px;
+  color: #F9FAF8;
 }
 
-.intro-text {
-  max-width: 50ch;
-}
-
-.signup {
-  background-color: #3882F6;
-  color: #fff;
-  border: 0 solid #000;
-  border-radius: 6px;
-  padding: 5px 20px;
-}
-
-.right-header {
-  border: 3px solid green;
-  flex-shrink: 0;
-
-}
-
-.right-header ul {
+ul {
   display: flex;
-  justify-content: flex-end;
   list-style-type: none;
   gap: 30px;
 }
 
 ul a {
   text-decoration: none;
-  color: white;
+  font-size: 18px;
+  color: #E5E7EB;
 }
+
+.bottom-header {
+  padding: 100px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.intro-text {
+  max-width: 50ch;
+}
+
+.intro-text h1 {
+  font-size: 48px;
+  font-weight: 900;
+  color: #F9FAF8;
+  margin: 0;
+}
+
+.intro-text p {
+  margin: 0;
+  max-width: 47ch;
+}
+
+.signup {
+  cursor: pointer;
+  background-color: #3882F6;
+  color: #fff;
+  border: 0 solid #000;
+  border-radius: 6px;
+  padding: 5px 20px;
+  margin-top: 16px;
+}
+
 
 .header-image {
   height: 200px;
@@ -64,35 +84,34 @@ h2 {
 }
 
 .card-container {
-  border: 3px solid red;
   display: flex;
-
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: center;
   gap: 30px;
-}
-
-.card {
-  border: 3px solid blue;
-  border-radius: 10px;
-  height: 100px;
-  width: 130px;
+  margin: 30px 0 60px 0;
 }
 
 .card-info {
-  border: 1px solid purple;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.card {
+  align-self: center;
+  border: 4px solid #3882F6;
+  border-radius: 10px;
+  height: 135px;
+  width: 135px;
 }
 
 .card-text {
-  border: 1px solid rgb(42, 255, 4);
-  display: flex;
-  align-self: center;
-  max-width: 17ch;
+  font-size: 18px;
+  color: #1c1b1b;
   margin: 0;
+  max-width: 18ch;
+  text-align: center;
 }
-
 
 /* quote */
 .quote {
@@ -106,7 +125,7 @@ h2 {
 }
 
 .quote p {
-  max-width: 65ch;
+  max-width: 58ch;
   padding: 16px;
   margin: 0;
   font-size: 36px;
@@ -123,27 +142,47 @@ h2 {
 
 /* cta */
 .cta {
-   border: 1px solid red;
+   padding: 50px;
    display: flex;
-   justify-content: space-around;
-   padding: 40px;
+   justify-content: center;
 }
 
 .cta-wrapper {
-  border: 1px solid red;
-  color: rgb(0, 0, 0);
-  display: flex;
-  justify-content: space-between;
+  font-family: sans;
   background-color: #3882F6;
+  border-radius: 6px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  gap: 20px;
 }
 
-.cta-text {
-  max-width: 40ch;
-
-}
-.signup2 {
-  background-color: black;
-  border: 1px solid #fff;
-  border-radius: 5px;
+.cta-text h4 {
   color: #fff;
+  margin: 0;
+}
+
+.cta-text p {
+  color: #fff;
+  margin: 0;
+}
+
+.two {
+  cursor: pointer;
+  background-color: #3882F6;
+  border: 2px solid white;
+  color: #fff;
+  border-radius: 6px;
+  padding: 4px 16px;
+}
+
+.footer {
+  background-color: #1F2937;
+  display: flex;
+  justify-content: center;
+}
+/* footer */
+.footer p {
+  color: #E5E7EB
 }
